# LibKCode

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
docs/: LICENSE-docs.md  测试文档.md  设计文档.md
docs/templates/: 十次压测对比数据.xlsx
kernel/: Makefile  kcode.c  kcode.h  kcode_ioctl.h
lib/: Makefile
lib/include/: kcode.h
lib/internal/: kcode_internal.h
lib/src/: kcode_init.c  kcode_rbtree.c  kcode_sort.c
tests/jit/: Makefile  test_jit_demo.c
tests/kernel/: test_kcode.c
tests/lib/: Makefile  benchmark.cpp  final_bench.cpp  rbtree_checker.h  test_rbtree.c  test_rbtree_advanced.c  test_rbtree_stress.c  test_sort.c
